--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Playfair", serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-variation-settings: "wdth" 100;
+  width: 100%;
 }
 .text {
   font-size: 40px;
