--- a/style.css
+++ b/style.css
@@ -1,21 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap");
-
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
   background-color: #b7b1f2;
   font-family: "Playfair", serif;
   font-optical-sizing: auto;
   font-style: normal;
-  width: 100%;
+  padding: 0.5rem;
 }
 .text {
   font-size: 40px;
   color: #ffff;
 }
 .tittle {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  padding-right: 0.5em;
+  margin-top: 1rem;
+
   color: #ffff;
 }
 
@@ -27,7 +29,7 @@ body {
   border: 2px solid #000;
 }
 body {
-  gap: 30px;
+  gap: 2rem;
   justify-content: center;
   display: flex;
   flex-direction: column;
